# structured-data-transformer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: all_unittests.yml  ruff.yml
examples/simple/: config.json  key.json
examples/simple/input/: network.json  transactions.csv
examples/simple/output/: network.json  transactions.csv
src/structured_data_transformer/: __init__.py  btc_json_sanitizer.py  executor.py  models.py
src/structured_data_transformer/adapters/: csv.py  json.py  path.py
src/structured_data_transformer/config/: loader.py  transform_config.py
src/structured_data_transformer/transforms/: __init__.py  anonymizers.py
tests/: test_integration.py
tests/adapters/: test_csv.py  test_file.py  test_file_csv.py  test_json.py
tests/anonymizers/: test_stable.py
tests/btc_json_sanitizer/: conftest.py  test_btc_sanitizer.py  test_sanitize_string.py
tests/config/: test_loader.py
