[project]
name = "structured-data-transformer"
version = "0.1.0"
dependencies = [
    "jsonpath_ng==1.7.0",
    "faker==37.4.2",
    "base58==2.1.1",
    "pydantic==2.11.7",
    "tqdm==4.67.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "ruff==0.12.2",
]


[project.scripts]
sdt = "structured_data_transformer:main"